--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Safwan | Web Developer</title>
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <section class="header-section">
+            <div class="container">
+                <div class="flexible">
+                    <div class="first-half designing-hero-content">
+                        <h1>Welcome To</h1>
+                        <h2><span>Safwan's</span> World!!</h2>
+                        <h4>Build Climber and Train Stopper</h4>
+                        <p>
+                            You might saw me jumping, climbing buildings, and
+                            stopping trains. But nobody pays me a dime for that
+                            work. That's why I am learning and mastering web
+                            development. I will not stop until I become the Web
+                            Development Hero.
+                        </p>
+                        <a
+                            href="https://mdsafwan.com"
+                            class="btn-link"
+                            target="_blank"
+                            >HIRE ME</a
+                        >
+                    </div>
+                    <div class="second-half">
+                        <img src="images/my-picture.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
