second section finished

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Safwan | Web Developer</title>
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link
+            rel="shortcut icon"
+            href="images/favicon.ico"
+            type="image/x-icon"
+        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="style.css" />
@@ -20,7 +24,7 @@
                 <div class="flexible">
                     <div class="first-half designing-hero-content">
                         <h1>Welcome To</h1>
-                        <h2><span>Safwan's</span> World!!</h2>
+                        <h2><span class="inline-design">Safwan's</span> World!!</h2>
                         <h4>Build Climber and Train Stopper</h4>
                         <p>
                             You might saw me jumping, climbing buildings, and
@@ -38,6 +42,31 @@
                     </div>
                     <div class="second-half">
                         <img src="images/my-picture.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-section">
+            <div class="container">
+                <div class="flexible">
+                    <div class="second-half aligning-image-second-section">
+                        <img src="images/my-picture.png" alt="" />
+                    </div>
+                    <div class="first-half">
+                        <h2>Dream Big</h2>
+                        <h4>Become a web developer</h4>
+                        <p>
+                            I already learned the basic HTML and CSS. I can
+                            build any simple website. I can even teach my
+                            grandma how to make simple website. My goal is to
+                            build 3 websites and learn advanced topics.
+                        </p>
+                        <a
+                            href="https://mdsafwan.com"
+                            class="btn-link"
+                            target="_blank"
+                            >DOWNLOAD RESUME</a
+                        >
                     </div>
                 </div>
             </div>
