experience section ends

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <div class="flexible">
                     <div class="first-half designing-hero-content">
                         <h1>Welcome To</h1>
-                        <h2><span class="inline-design">Safwan's</span> World!!</h2>
+                        <h2>
+                            <span class="inline-design">Safwan's</span> World!!
+                        </h2>
                         <h4>Build Climber and Train Stopper</h4>
                         <p>
                             You might saw me jumping, climbing buildings, and
@@ -67,6 +69,36 @@
                             target="_blank"
                             >DOWNLOAD RESUME</a
                         >
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="exp-section"> 
+            <div class="container">
+                <h2>Experiences</h2>
+                <div class="exp-cont">
+                    <div class="half-exp">
+                        <h3>Full Stack Web Developer</h3>
+                        <h5>2021-Present | Pro Level Developer</h5>
+                        <p>
+                            I am the master of HTML, CSS and Javascript. I know
+                            everything needed to make a website function,
+                            efficient. I didn't stop with the web. I went beyond
+                            with most popular Javascript framework called Vue
+                            JS. I even know the deployment, server and security.
+                            I will give you 100% web solution.
+                        </p>
+                    </div>
+                    <div class="half-exp">
+                        <h3>Baby Web Developer</h3>
+                        <h5>2020-2021 | Programming Learner</h5>
+                        <p>
+                            They didn't offer me a job. But I made myself as a
+                            remove web developer. I made their website and
+                            showed it to them. They liked it. And uploaded the
+                            content. It was fun working at Programming Hero.
+                        </p>
                     </div>
                 </div>
             </div>
