--- a/index.html
+++ b/index.html
@@ -103,5 +103,10 @@
                 </div>
             </div>
         </section>
+
+
+        <footer>
+            <p>&copy; 2022 | All Rights Reserved by <a href="https://mdsafwan.com" target="_blank">Safwan</a></p>
+        </footer>
     </body>
 </html>
